frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-app-frontend
  namespace: default
  labels:
    app: student-app-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-app-frontend
  template:
    metadata:
      labels:
        app: student-app-frontend
    spec:
      containers:
        - name: student-app-container
          image: dikshat1024/frontend:9f21497952383eb334252f8ff7c8cae8cf8e0ba7
          ports:  
            - containerPort: 80
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 200Mi
