frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-app-frontend-svc
  namespace: default
spec:
  selector:
    app: student-app-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
